AC-121 Create event for addApplicationAction in ApplicationAdmin

--- a/src/Araneum/Bundle/MainBundle/Resources/config/admin.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/admin.yml
@@ -19,6 +19,7 @@ services:
             - Araneum\Bundle\MainBundle\Entity\Connection
             - ~
         calls:
+            - [setEntityManager, [@doctrine.orm.entity_manager]]
             - [setDispatcher, [@event_dispatcher]]
             
     araneum.main.admin.locale:
