--- a/src/Araneum/Bundle/MainBundle/Resources/config/admin.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/admin.yml
@@ -51,5 +51,5 @@ services:
                 - Araneum\Bundle\MainBundle\Entity\Application
                 - ~
             calls:
-                - [setContainer, [@service_container]]
+                - [setSecurityToken, [@security.token_storage]]
                 - [setDispatcher, [@event_dispatcher]]
