AC-171 Lead Entity

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+araneum_agent:
+    resource: "@AraneumAgentBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 araneum_root:
     path: /
     defaults:
