--- a/src/Araneum/Bundle/AgentBundle/Resources/config/admin.yml
+++ b/src/Araneum/Bundle/AgentBundle/Resources/config/admin.yml
@@ -1,5 +1,5 @@
 services:
-  araneum.customer.admin.customer:
+  araneum.agent.admin.customer:
       class: Araneum\Bundle\AgentBundle\Admin\CustomerAdmin
       tags:
           - { name: sonata.admin, manager_type: orm, group: "Customer", label: "Customer" }
