--- a/app/config/routing_with_locale.yml
+++ b/app/config/routing_with_locale.yml
@@ -18,6 +18,11 @@ araneum_mail:
     type: annotation
     prefix: /mail
 
+araneum_agent:
+    resource: "@AraneumAgentBundle/Controller"
+    type: annotation
+    prefix: /agent
+
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
     prefix: /admin
