--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -99,6 +99,7 @@ accelerator_cache:
     web_dir: %kernel.root_dir%/../web
 
 fos_rest:
+    param_fetcher_listener: 'force'
     routing_loader:
         default_format: json
     view:
