--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -26,3 +26,5 @@ services:
     araneum.main.application.checker:
         class: Araneum\Bundle\MainBundle\Service\ApplicationCheckerService
         arguments: [@doctrine.orm.entity_manager, @guzzle.client]
+        calls:
+            - [setAgentLogger, [@araneum.agent.logger]]
