--- a/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 services:
   araneum.agent.customer.api_handler:
     class: Araneum\Bundle\AgentBundle\Service\CustomerApiHandlerService
-    arguments: [@doctrine.orm.entity_manager, @araneum.main.application.manager, @form.factory, @araneum.agent.spotoption.service]
+    arguments: [@service_container]
 
   araneum.agent.spotoption.service:
     class: Araneum\Bundle\AgentBundle\Service\SpotOptionService
