AC-193 Can change connection to an empty field "Port" and "User name"

--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -21,7 +21,7 @@ services:
         tags:
             - { name: kernel.event_listener, event: araneum.main.application.event.post_persist, method: postPersist }
             - { name: kernel.event_listener, event: araneum.main.application.event.post_update, method: postUpdate }
-            - { name: kernel.event_listener, event: araneum.main.application.event.post_remove, method: postRemove }
+            - { name: kernel.event_listener, event: araneum.main.application.event.pre_remove, method: preRemove }
     
     araneum.main.application.checker:
         class: Araneum\Bundle\MainBundle\Service\ApplicationCheckerService
