--- a/web/assets/source/bower.json
+++ b/web/assets/source/bower.json
@@ -106,7 +106,10 @@
     "jquery.browser": "master",
     "angular-knob": "~0.0.2",
     "jquery.easy-pie-chart": "~2.1.6",
-    "angular-bootstrap-colorpicker": "~3.0.18"
+    "angular-bootstrap-colorpicker": "~3.0.18",
+    "bootstrap": "~3.3.5",
+    "jquery-validation": "~1.14.0",
+    "jquery": "2.1.3"
   },
   "resolutions": {
     "jquery-ui": "1.11.3",
