--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /web/bundles/
 /web/assets/source/node_modules/
 /web/assets/vendor
+/web/assets/build
 /web/assets/source/bower_components/
 !/web/bundles/araneumuser/*
 /.idea/
