--- a/web/assets/source/bower.json
+++ b/web/assets/source/bower.json
@@ -107,9 +107,7 @@
     "angular-knob": "~0.0.2",
     "jquery.easy-pie-chart": "~2.1.6",
     "angular-bootstrap-colorpicker": "~3.0.18",
-    "bootstrap": "~3.3.5",
-    "jquery-validation": "~1.14.0",
-    "jquery": "2.1.3"
+    "jquery-validation": "~1.14.0"
   },
   "resolutions": {
     "jquery-ui": "1.11.3",
