--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -28,3 +28,6 @@ services:
         arguments: [@doctrine.orm.entity_manager, @guzzle.client]
         calls:
             - [setAgentLogger, [@araneum.agent.logger]]
+
+    araneum.main.menu.generator:
+        class: Araneum\Bundle\MainBundle\Service\MenuGeneratorService
