--- a/src/Araneum/Bundle/MainBundle/Resources/menu/left.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/menu/left.yml
@@ -6,12 +6,12 @@ Main:
       text: Dashboard
       sref: app.dashboard
       icon: icon-speedometer
-      translate: sidebar.nav.DASHBOARD
+      translate: admin.sidebar.nav.DASHBOARD
     Users:
       text: Users
       sref: app.table-ngtable
       icon: icon-users
-      translate: sidebar.nav.USERS
+      translate: admin.sidebar.nav.USERS
 Site_Manager:
   text: Site manager
   translate: sidebar.heading.MANAGER
@@ -20,38 +20,38 @@ Site_Manager:
       text: Cluster
       sref: app.table-standard
       icon: icon-grid
-      translate: sidebar.nav.manager.CLUSTER
+      translate: admin.sidebar.nav.manager.CLUSTER
     Applications:
       text: Applications
       sref: app.application
       icon: icon-screen-tablet
-      translate: sidebar.nav.manager.APPLICATION
+      translate: admin.sidebar.nav.manager.APPLICATION
     Connection:
       text: Connection
       sref: app.connections
       icon: icon-share-alt
-      translate: sidebar.nav.manager.CONNECTION
+      translate: admin.sidebar.nav.manager.CONNECTION
     Component:
       text: Component
       sref: app.components
       icon: icon-puzzle
-      translate: sidebar.nav.manager.COMPONENT
+      translate: admin.sidebar.nav.manager.COMPONENT
     Locale:
       text: Locale
       sref: app.locales
       icon: icon-globe-alt
-      translate: sidebar.nav.manager.LOCALE
+      translate: admin.sidebar.nav.manager.LOCALE
 Received_data:
   text: Received_data
-  translate: sidebar.heading.RECEIVE
+  translate: admin.sidebar.heading.RECEIVE
   submenu:
     Cluster:
       text: Customer
       sref: app.customers
       icon: icon-user-follow
-      translate: sidebar.nav.received.CUSTOMER
+      translate: admin.sidebar.nav.received.CUSTOMER
     Email:
       text: Email
       sref: app.emails
       icon: icon-layers
-      translate: sidebar.nav.received.EMAIL
+      translate: admin.sidebar.nav.received.EMAIL
