--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,6 +26,8 @@ security:
                 check_path: fos_user_security_check
                 default_target_path: sonata_admin_dashboard
                 csrf_provider: security.csrf.token_manager
+                success_handler: araneum.user.authentication_handler
+                failure_handler: araneum.user.authentication_handler
             anonymous: true
             logout:
                 path: fos_user_security_logout
