--- a/src/Araneum/Bundle/UserBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/config/services.yml
@@ -1,1 +1,6 @@
 services:
+    araneum.user.authentication_handler:
+        class: Araneum\Bundle\UserBundle\Service\AuthenticationHandler
+        arguments: [@router, @session]
+        tags:
+            - { name: 'monolog.logger', channel: 'securirty' }
