--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,10 +3,10 @@
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
     database_host:     127.0.0.1
-    database_port:     ~
-    database_name:     symfony
-    database_user:     root
-    database_password: ~
+    database_port:     5432
+    database_name:     araneum_core
+    database_user:     postgres
+    database_password: 123
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
