--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "oldsound/rabbitmq-bundle": "1.*",
         "snc/redis-bundle": "1.1.x-dev",
         "predis/predis": "1.*",
-        "misd/guzzle-bundle": "^1.1"
+        "misd/guzzle-bundle": "^1.1",
+        "jms/i18n-routing-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
