AC-200 Does not work urls without language fix typo

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -150,5 +150,5 @@ snc_redis:
 
 jms_i18n_routing:
     default_locale: %locale%
-    locales: %locales$
+    locales: %locales%
     strategy: prefix_except_default
