AC-164 Connect application status charts

--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -29,5 +29,9 @@ services:
         calls:
             - [setAgentLogger, [@araneum.agent.logger]]
 
+    araneum.main.statistics.service:
+        class: Araneum\Bundle\MainBundle\Service\StatisticsService
+        arguments: [@doctrine.orm.entity_manager]
+
     araneum.main.menu.generator:
         class: Araneum\Bundle\MainBundle\Service\MenuGeneratorService
