--- a/src/Araneum/Bundle/UserBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     araneum.user.authentication_handler:
         class: Araneum\Bundle\UserBundle\Service\AuthenticationHandler
-        arguments: [@router, @session]
+        arguments: [@router, @session, @form.csrf_provider]
         tags:
             - { name: 'monolog.logger', channel: 'securirty' }
