AC-200 Does not work urls without language fix manage panel

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,10 @@
+manage_all:
+    defaults: {_controller:"AraneumMainBundle:Default:admin"}
+    pattern: manage/{path}
+    requirements:
+        path: .*
+    condition: "!request.isXmlHttpRequest()"
+
 araneum_root:
     path: /
     defaults:
