AC-164 Connect application status charts

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,6 +67,11 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        dql:
+            datetime_functions:
+                date_part: Araneum\Base\DoctrineFunctions\DatePart
+            numeric_functions:
+                cast: Araneum\Base\DoctrineFunctions\Cast
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -77,7 +82,7 @@ swiftmailer:
     username:   "%mailer_user%"
     password:   "%mailer_password%"
     spool:      { type: memory }
-    
+
 fos_user:
     db_driver: orm
     firewall_name: main
