--- a/src/Araneum/Base/Resources/config/services.yml
+++ b/src/Araneum/Base/Resources/config/services.yml
@@ -1,3 +1,3 @@
 services:
     araneum.base.form.handler:
-        class: Araneum\Base\Service\FormHandler
+        class: Araneum\Base\Service\FormHandlerService
