AC-164 Connect application status charts

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,6 +72,7 @@ doctrine:
                 date_part: Araneum\Base\DoctrineFunctions\DatePart
             numeric_functions:
                 cast: Araneum\Base\DoctrineFunctions\Cast
+                round: Araneum\Base\DoctrineFunctions\Round
 
 # Swiftmailer Configuration
 swiftmailer:
