--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "snc/redis-bundle": "1.1.x-dev",
         "predis/predis": "1.*",
         "misd/guzzle-bundle": "^1.1",
-        "jms/i18n-routing-bundle": "^1.1"
+        "jms/i18n-routing-bundle": "^1.1",
+        "ali/datatable": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
