--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "predis/predis": "1.*",
         "misd/guzzle-bundle": "^1.1",
         "jms/i18n-routing-bundle": "^1.1",
-        "ali/datatable": "^2.0"
+        "ali/datatable": "^2.0",
+        "lexik/form-filter-bundle": "~4.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
