--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -9,6 +9,7 @@
 >
     <testsuites>
         <testsuite name="Project Test Suite">
+            <directory>../src/Araneum/Base/Tests/Unit</directory>
             <directory>../src/*/*Bundle/Tests</directory>
             <directory>../src/*/Bundle/*Bundle/Tests</directory>
             <directory>../src/*Bundle/Tests</directory>
