--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -20,8 +20,7 @@ araneum_root:
 araneum_user:
     resource: "@AraneumUserBundle/Controller/"
     type:     annotation
-    prefix:   /{slug}
-    defaults: {'slug': 'user'}
+    prefix:   /user
 
 araneum_agent:
     resource: "@AraneumAgentBundle/Controller"
