AC-239 Need to fix route for reset password

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -14,7 +14,7 @@ araneum_root:
     path: /
     defaults:
         _controller: FrameworkBundle:Redirect:redirect
-        route: sonata_admin_dashboard
+        route: manage_index
         permanent: true
 
 araneum_user:
