AC-228 Create actions for Locale grid

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,12 +11,12 @@ security:
             id: fos_user.user_provider.username
 
     firewalls:
-#        api:
-#            pattern: ^/.*/api
-#            anonymous: ~
-#            http_basic:
-#                realm: "Araneum.Core API secure"
-#            stateless: true
+        api:
+            pattern: ^/.*/api
+            anonymous: ~
+            http_basic:
+                realm: "Araneum.Core API secure"
+            stateless: true
 
         manage:
             pattern: ^/manage
