AC-228 Create actions for Locale grid

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -43,4 +43,4 @@ security:
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/[a-zA-Z]+/admin/, role: ROLE_ADMIN }
         - { path: ^/admin/, role: ROLE_ADMIN }
-#        - { path: ^/.*/api, role: ROLE_API }
+        - { path: ^/.*/api, role: ROLE_API }
