AC-251 Modify customer creation Api method without real test on spotOption Api

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -12,6 +12,8 @@ parameters:
     site_api:
         user: api
         password: QDurWe68
+    rabbitmq_queue_expiration: '3600000000' # Time to live message in queue 1 hour in milliseconds
+    rabbitmq_message_ttl: '20000'
 
 
 framework:
@@ -138,6 +140,33 @@ old_sound_rabbit_mq:
 
             keepalive: false
             heartbeat: 0
+    producers:
+        spot:
+            connection: default
+            exchange_options:
+                name: 'quarantee_delivery'
+                type: direct
+                auto_delete: false
+                durable: true
+            queue_options:
+                name: "sendToSpot"
+                routing_keys:
+                    - "sendToSpot"
+                arguments:
+                    "message-ttl": ['I', %rabbitmq_message_ttl%]
+                    "dead-letter-exchange": ['S', 'araneum.base.rabbitmq.producer.spot']
+                    "dead-letter-routing-key": ['S', 'sendToCore']
+    consumers:
+        spot:
+            connection: default
+            exchange_options:
+                name: 'quarantee_delivery'
+                type: direct
+                auto_delete: false
+                durable: true
+            queue_options:
+                name: "sendToSpot"
+            callback: araneum.base.rabbitmq.consumer.spot
 
 snc_redis:
     clients:
