--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,18 +29,17 @@ security:
                 provider: fos_userbundle
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
-                default_target_path: sonata_admin_dashboard
+ #               default_target_path: sonata_admin_dashboard
                 csrf_provider: security.csrf.token_manager
                 success_handler: araneum.user.authentication_handler
                 failure_handler: araneum.user.authentication_handler
             anonymous: true
             logout:
                 path: fos_user_security_logout
-                target: sonata_admin_dashboard
+#                target: sonata_admin_dashboard
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/[a-zA-Z]+/admin/, role: ROLE_ADMIN }
-        - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/.*/api, role: ROLE_API }
