--- a/src/Araneum/Bundle/UserBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 services:
     araneum.user.authentication_handler:
         class: Araneum\Bundle\UserBundle\Service\AuthenticationHandler
-        arguments: [@router, @session, @form.csrf_provider]
+        arguments: [@router, @session, @security.csrf.token_manager]
         tags:
             - { name: 'monolog.logger', channel: 'securirty' }
 
