AC-233 Import from site User grid fix deprecated check & dead code
(cherry picked from commit 99375e133c4f85d8bb797b645b9e7539efbb5766)

# Conflicts:
#	src/Araneum/Bundle/UserBundle/Form/Filter/UserFilterType.php

--- a/src/Araneum/Bundle/UserBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     araneum.user.authentication_handler:
         class: Araneum\Bundle\UserBundle\Service\AuthenticationHandler
-        arguments: [@router, @session, @form.csrf_provider]
+        arguments: [@router, @session, @security.csrf.token_manager]
         tags:
             - { name: 'monolog.logger', channel: 'securirty' }
