AC-251 Modify customer creation Api method move to parameters.yml.dist rabbitmq_queue_expiration

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -27,3 +27,4 @@ parameters:
     rabbitmq_port: 5672
     rabbitmq_user: 'admin'
     rabbitmq_password: '12345'
+    rabbitmq_queue_expiration: '3600000000' # Time to live message in queue 1 hour in milliseconds
