--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,7 @@ security:
         FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
-            ROLE_ADMIN: [ROLE_USER, ROLE_SONATA_ADMIN]
+            ROLE_ADMIN: [ROLE_USER]
             ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_API]
 
     providers:
@@ -29,14 +29,14 @@ security:
                 provider: fos_userbundle
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
- #               default_target_path: sonata_admin_dashboard
+                default_target_path: /login
                 csrf_provider: security.csrf.token_manager
                 success_handler: araneum.user.authentication_handler
                 failure_handler: araneum.user.authentication_handler
             anonymous: true
             logout:
                 path: fos_user_security_logout
-#                target: sonata_admin_dashboard
+                target: /login
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
