--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,14 +29,14 @@ security:
                 provider: fos_userbundle
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
-                default_target_path: /login
+                default_target_path: fos_user_security_login
                 csrf_provider: security.csrf.token_manager
                 success_handler: araneum.user.authentication_handler
                 failure_handler: araneum.user.authentication_handler
             anonymous: true
             logout:
                 path: fos_user_security_logout
-                target: /login
+                target: fos_user_security_login
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
