AC-252 Modify customer login Api method

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -27,3 +27,5 @@ parameters:
     rabbitmq_port: 5672
     rabbitmq_user: 'admin'
     rabbitmq_password: '12345'
+
+    spot_api_public_url_login: '/Login/login/unusedRequiredParameter'
