--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -8,14 +8,21 @@
          bootstrap="bootstrap.php.cache"
 >
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="unit">
             <directory>../src/Araneum/Base/Tests/Unit</directory>
-            <directory>../src/*/*Bundle/Tests</directory>
-            <directory>../src/*/Bundle/*Bundle/Tests</directory>
-            <directory>../src/*Bundle/Tests</directory>
+            <directory>../src/*/*Bundle/Tests/Unit</directory>
+            <directory>../src/*/Bundle/*Bundle/Tests/Unit</directory>
+            <directory>../src/*Bundle/Tests/Unit</directory>
         </testsuite>
     </testsuites>
 
+    <testsuites>
+        <testsuite name="functional">
+            <directory>../src/*/*Bundle/Tests/Functional</directory>
+            <directory>../src/*/Bundle/*Bundle/Tests/Functional</directory>
+            <directory>../src/*Bundle/Tests/Functional</directory>
+        </testsuite>
+    </testsuites>
     <!--
     <php>
         <server name="KERNEL_DIR" value="/path/to/your/app/" />
