AC-209 Need to add authorization to api/doc

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,6 +11,11 @@ security:
             id: fos_user.user_provider.username
 
     firewalls:
+        api_doc:
+            pattern: ^/api/doc
+            anonymous: ~
+            http_basic:
+                realm: "Secured area"
         api:
             pattern: ^/.*/api
             anonymous: ~
@@ -43,3 +48,4 @@ security:
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/[a-zA-Z]+/admin/, role: ROLE_ADMIN }
         - { path: ^/.*/api, role: ROLE_API }
+        - { path: ^/api/doc, role: ROLE_API }
