--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,23 +11,16 @@ security:
             id: fos_user.user_provider.username
 
     firewalls:
-        api_doc:
-            pattern: ^/api/doc
-            anonymous: ~
-            http_basic:
-                realm: "Secured area"
-        api:
-            pattern: ^/.*/api
-            anonymous: ~
-            http_basic:
-                realm: "Araneum.Core API secure"
-            stateless: true
-
         manage:
             pattern: ^/manage
             anonymous: ~
             entry_point: araneum_authentication
-
+        api:
+            pattern: ^/.*api
+            anonymous: ~
+            http_basic:
+                realm: "Araneum.Core API secure"
+            stateless: true
         main:
             pattern: ^/
             form_login:
@@ -46,6 +39,5 @@ security:
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/[a-zA-Z]+/admin/, role: ROLE_ADMIN }
-        - { path: ^/.*/api, role: ROLE_API }
         - { path: ^/api/doc, role: ROLE_API }
+        - { path: ^/[a-zA-Z]+/admin/, role: ROLE_ADMIN }
